# HalluciNet

./: .gitignore  .hfignore  README.md  TRAINING.md  adversarial_coordinator.py  adversarial_results.csv  blog.md  curriculum.py  final_validate.sh  grader.py  inference.py  leaderboard.json  openenv.yaml  oversight_agent.py  project_context.md  pyproject.toml  run_output.txt  tasks.py
server/: app.py  calibration.py  debate_coordinator.py  elo.py  environment.py  generator_environment.py  leaderboard.py  oversight_agent.py
