[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hallucinet-adversarial"
version = "2.0.0"
description = "Adversarial self-improving hallucination detection"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core",
    "python-dotenv",
    "httpx",
    "requests",
]

[project.scripts]
server = "server.app:main"
